package com.tetras;

public enum Couleur {
    Jaune,
    Bleu
}