package com.tetras;

public interface IPacGomme {
    Couleur getCouleur();

    int getTaille();
}