package com.tetras;

public class PacGommeBoost extends AbstractPacGomme {

    public PacGommeBoost() {
        super(Couleur.Bleu, 10);
    }

}