package com.tetras;

public class PacGommeNormale extends AbstractPacGomme {

    public PacGommeNormale() {
        super(Couleur.Jaune, 5);
    }

}